@@ -1,3 +1,4 @@
+[2017-12-14 19:44:38 +0100]  Moving files                                                               karasu      {0d8c4a47}
 [2017-12-14 19:40:09 +0100]  Just fooling around                                                        karasu      {c126c6fc}
 [2017-12-14 18:39:15 +0100]  Renamed ui files                                                           karasu      {961530d8}
 [2017-12-09 22:05:36 +0100]  New file                                                                   karasu      {f9adfff2}
